# rename-wheel

./: README.md  pyproject.toml
src/wheel_rename/: cli.py  download.py
tests/: conftest.py  test_dual_install.py  test_icechunk_integration.py
tests/fixtures/dual-install/: README.md  pyproject.toml
