[project]
name = "dual-icechunk-test"
version = "0.1.0"
description = "Test fixture for dual icechunk version installation"
requires-python = ">=3.11"
dependencies = [
    "icechunk>=2.0.0.dev0",  # v2 from nightly
    "icechunk_v1",            # v1 renamed, from our proxy
]

[tool.uv]
# PyPI for most deps, nightly for icechunk v2, proxy for icechunk_v1
extra-index-url = [
    "https://pypi.anaconda.org/scientific-python-nightly-wheels/simple",
    "http://127.0.0.1:8123/simple/",
]
# Allow pre-release versions for icechunk
prerelease = "allow"
